--- a/econometrics2.Rmd
+++ b/econometrics2.Rmd
@@ -649,13 +649,126 @@ We can not use OLS!
 
 This is why you have to always create exactly as many coefficients for categorical variables as levels it has minus 1. This is called dummy coding.
 
-If you drop B2, then only one solution is appropriate.
+If you drop B2, there is only one appropriate solution.
 
 | $\beta_0$ | $\beta_1$ |
 |:---------:|:---------:|
 |     800     |     400     |
 
+---
 
+## Multicollinearity
+
+- Imagine that you add an almost fully irrelevant explanatory variable to the model. .blue[In which direction can the explanatory power of the model change?]
+
+--
+
+  - OLS perfectly finds the best "parameter combination" to minimize SSE
+  
+  - SST depends on the variance, thus it does not change.
+  
+--
+  
+  - If the additional variable is fully irrelevant, then its coefficient will be zero, and the model returns the same solution as previously
+  
+  - **R-squared can not reduce, if you add one additional explanatory variable**
+
+--
+
+.blue[So why do not we use all the available variables?]
+
+
+---
+
+
+## Multicollinearity
+
+Again, think about the house data from the last week. If the area is bigger, the expected price is higher, just as the expected number of rooms. .blue[By adding the number of rooms, does the variability of the estimate of the effect related to the size increase or decrease?]
+
+--
+
+> "Explanatory variables are highly intercorrelated is referred to as multicollinearity. When the explanatory
+variables are highly intercorrelated, it becomes difficult to disentangle the separate effects of each
+of the explanatory variables on the explained variable." 
+
+Formally the variance of the estimated coef:
+
+.pull-left[
+$$V(\hat{\beta_i})=\frac{\sigma^2}{S_{ii}(1-R^2_i)},$$
+]
+
+.pull-right[
+where
+$$\sigma^2 = \text{Variance of the residuals}$$
+
+$$S_{ii} = \text{Variance of the given covariate}$$
+]
+
+$$R^2_{i} = \text{Proportion of the variance of the investigated covariate}$$
+
+$$\text{explained by the other covariates}$$
+
+---
+
+## Multicollinearity
+
+.blue[How to detect multicollinearity?]
+
+--
+
+We saw that higher intercorrelation among the covariates leads to higher variance in the estimated effects.
+
+So lets express the magnitude of this increase caused by the other explanatory variables.
+
+--
+
+#### Variance Inflation Factor
+
+$$\text{VIF}(\hat{\beta_i})=\frac{1}{1-R^2_i}$$
+
+We can interpret VIF as the ratio of the actual variance of coefficient to what
+the variance would have been if explanatory variables were uncorrelated.
+
+---
+
+### VIF in R
+
+```{r echo=TRUE, eval=FALSE}
+amsterdam_house_df <- read_rds("https://raw.githubusercontent.com/MarcellGranat/big_data2022/main/econometrics_files/amsterdam_house.rds") %>% 
+  drop_na(Price, Area, Room)
+```
+
+```{r}
+amsterdam_house_df <- read_rds("econometrics_files/amsterdam_house.rds") %>% 
+    drop_na(Price, Area, Room)
+```
+
+```{r echo=TRUE}
+fit_yxz <- lm(Price ~ Area + Room, amsterdam_house_df)
+fit_yx <- lm(Price ~ Area, amsterdam_house_df)
+fit_xz <- lm(Area ~ Room, amsterdam_house_df)
+```
+
+```{r echo=TRUE}
+broom::tidy(fit_yxz)
+```
+
+---
+
+### VIF in R
+
+```{r echo=TRUE}
+broom::tidy(fit_yx)
+1 / (1 - broom::glance(fit_xz)$r.squared)
+```
+
+--
+
+The "easier" solution:
+
+```{r echo=TRUE}
+car::vif(fit_yxz)
+```
 
 ---
 
@@ -678,9 +791,9 @@ multicol_dgp()
 
 ---
 
-## Simulation
+### Simulation I
 
-```{r echo=TRUE, cache=TRUE}
+```{r echo=TRUE, cache=TRUE, eval=FALSE}
 rerun(1e4, multicol_dgp()) %>% 
   tibble(data = .) %>% 
   mutate(
@@ -690,13 +803,33 @@ rerun(1e4, multicol_dgp()) %>%
     x2 = map_df(tidied, slice, 3)
   ) %>% 
   summarise(
-    sd(x1$estimate), mean(x1$std.error),
-    sd(x2$estimate), mean(x2$std.error)
+    x1_est = sd(x1$estimate),  x1_std = mean(x1$std.error), 
+    x2_est = sd(x2$estimate),  x2_std = mean(x2$std.error)
   ) %>% 
   pivot_longer(everything())
 ```
 
-**Estimations are still consistent and unbiased!**
+.pull-left[
+```{r echo=FALSE, eval=TRUE}
+rerun(1e4, multicol_dgp()) %>% 
+  tibble(data = .) %>% 
+  mutate(
+    fit = map(data, lm, formula = y ~ x1 + x2),
+    tidied = map(fit, broom::tidy),
+    x1 = map_df(tidied, slice, 2),
+    x2 = map_df(tidied, slice, 3)
+  ) %>% 
+  summarise(
+    x1_est = sd(x1$estimate),  x1_std = mean(x1$std.error), 
+    x2_est = sd(x2$estimate),  x2_std = mean(x2$std.error)
+  ) %>% 
+  pivot_longer(everything())
+```
+]
+
+.pull-right[
+**Estimations are still consistent!**
+]
 
 ---
 
@@ -720,7 +853,25 @@ rerun(1e3, multicol_dgp(b1 = .1)) %>%
 
 ## Simulation III
 
-```{r echo=TRUE}
+```{r echo=TRUE, eval=FALSE}
+rerun(1e2, multicol_dgp(b1 = .1, b2 = .1)) %>% 
+  tibble(data = .) %>% 
+  mutate(
+    fit_bivariate = map(data, lm, formula = y ~ x1),
+    fit_trivariate = map(data, lm, formula = y ~ x1 + x2),
+*   bi = map_df(fit_bivariate, broom::glance),
+*   tr = map_df(fit_trivariate, broom::glance),
+  ) %>% 
+  summarise(
+    mean(bi$r.squared > tr$r.squared),
+    mean(bi$adj.r.squared > tr$adj.r.squared),
+    mean(bi$AIC < tr$AIC),
+    mean(bi$BIC < tr$BIC)
+  ) %>% 
+  pivot_longer(everything())
+```
+
+```{r echo=FALSE, eval=TRUE}
 rerun(1e2, multicol_dgp(b1 = .1, b2 = .1)) %>% 
   tibble(data = .) %>% 
   mutate(
@@ -742,9 +893,9 @@ rerun(1e2, multicol_dgp(b1 = .1, b2 = .1)) %>%
 
 ## Simulation III
 
-.blue[The listed criteria values can be used to select the relevant regressors.]
+.blue[The listed criteria values can be used to chose the appropriate model.]
 
-r.squared = The relative decrease in the squared error compared to a null model (as we saw at the correlation coefficient).
+r.squared = The decrease in the squared error compared to a null model (as we saw at the correlation coefficient).
 
 
 --
@@ -754,6 +905,8 @@ $$\text{Adjusted }R^2=1-\frac{SSE/(n - p)}{SST/(n-1)}$$
 AIC:
 
 $$AIC = SSE \times e^{2(k+1)/n}$$
+
+BIC:
 
 $$BIC = n \times ln(SSE/n) + k \times ln(n)$$
 
